--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,23 @@
-name: Go
+name: Test and Coverage
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [ push, pull_request ]
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
-    - name: Build
-      run: go build -v ./...
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.out -covermode=atomic
 
-    - name: Test
-      run: go test -v ./...
+#    - name: Upload coverage to Codecov
+#      run: bash <(curl -s https://codecov.io/bash)
