--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: 1.17
 
-      - name: Run coverage
+      - name: Run tests & coverage
         run: go test -race -coverprofile=coverage.out -covermode=atomic -v ./...
 
       - name: Upload coverage to Codecov
