Updates USSd to use DB
Signed-off-by: drh <jmnabangi@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,6 @@ SECURITY_QUESTION_COUNT=3
 
 INVITE_DURATION=48 #hours
 
+SESSION_STORE=db #db or file
+
 CUSTOMER_SUPPORT_EMAIL=customersupport@sidooh.co.ke
