updates account balances and withdrawals
Signed-off-by: drh <jmnabangi@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ INVITE_DURATION=48 #hours
 SESSION_STORE=db #db or file
 
 CUSTOMER_SUPPORT_EMAIL=customersupport@sidooh.co.ke
+DB_DSN=:@tcp(127.0.0.1:3306)/db?charset=utf8mb4&parseTime=True&loc=Local
