adds attribute to differentiate invite types
Signed-off-by: DrH <jmnabangi@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ SESSION_STORE=db #db or file
 
 CUSTOMER_SUPPORT_EMAIL=customersupport@sidooh.co.ke
 DB_DSN=:@tcp(127.0.0.1:3306)/db?charset=utf8mb4&parseTime=True&loc=Local
+
+SIDOOH_ACCOUNTS_API_URL=
